# undock

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yml  new-feature-plan.md  pyproject.toml
.github/workflows/: docker.yml  publish.yml
docker_tui/: app.py  docker_client.py
docker_tui/widgets/: container_table.py  log_panel.py  resize_handle.py
scripts/: release.py
undock/: app.py  compose.py  config.py  docker_client.py
undock/widgets/: __init__.py
